examples/tests/semantic/fail/duplicateArgumentName.tig
let 
    function duplicate_argument_name(x : int, x : int) : int = x
in 
end 